@@ -458,13 +458,15 @@ public class Frame extends JFrame {
             LoPanel loPanel;
             private class LoPanel extends JPanel {
                 LOTablePanel tablePanel;
+                EvaluationPanel evaluationPanel;
+
                 private class LOTablePanel extends JPanel {
                     LOTableModel tableModel;
                     JTable table;
                     JScrollPane scrollPane;
+
                     private class LOTableModel extends AbstractTableModel {
                         private String[] columnNames = {"#", "Learning Outcome"};
-
                         private ArrayList<Object[]> data = new ArrayList<>();
 
                         public int getColumnCount() {
@@ -497,12 +499,11 @@ public class Frame extends JFrame {
                             Object response = objectInput.readObject();
                             if (response instanceof List<?> && !((List<?>) response).isEmpty()) {
                                 List<?> responseList = (List<?>) response;
-
                                 for (Object course : responseList) {
                                     @SuppressWarnings("unchecked")
                                     Map<String, Object> courseMap = (Map<String, Object>) course;
-                                    int number = (int)courseMap.get("number");
-                                    String lo = (String)courseMap.get("text");
+                                    int number = (int) courseMap.get("number");
+                                    String lo = (String) courseMap.get("text");
                                     lo = lo.substring(0, lo.length() - 1);
                                     Object[] row = new Object[]{number, lo};
                                     this.tableModel.addRow(row);
@@ -519,24 +520,31 @@ public class Frame extends JFrame {
                     public LOTablePanel() {
                         this.tableModel = new LOTableModel();
                         this.table = new JTable(this.tableModel);
+
                         JTableHeader header = this.table.getTableHeader();
-                        header.setFont(new Font(getFont().toString(),Font.PLAIN, 15));
+                        header.setFont(new Font("Arial", Font.BOLD, 16));
+
                         TableColumnModel columnModel = table.getColumnModel();
                         int tableWidth = width / 32 * 20;
-                        columnModel.getColumn(0).setPreferredWidth(tableWidth / 28);
-                        columnModel.getColumn(1).setPreferredWidth(tableWidth / 28 * 27);
+                        columnModel.getColumn(0).setPreferredWidth(tableWidth / 56);
+                        columnModel.getColumn(1).setPreferredWidth(tableWidth / 56 * 54);
+
                         this.table.setRowHeight(height / 64 * 2);
                         this.table.setAutoCreateRowSorter(true);
+
                         this.scrollPane = new JScrollPane(table);
-                        this.scrollPane.setPreferredSize(new Dimension(width / 32 * 20, height / 32 * 7));
+                        this.scrollPane.setVerticalScrollBarPolicy(ScrollPaneConstants.VERTICAL_SCROLLBAR_ALWAYS);
+
+                        setLayout(new BorderLayout());
+                        add(scrollPane, BorderLayout.CENTER);
+
                         this.getLOs();
-                        add(scrollPane);
                     }
                 }
 
-                EvaluationPanel evaluationPanel;
                 private class EvaluationPanel extends JPanel {
                     JLabel evaluationCriteria;
+
                     String getEvaluationCriteria() {
                         String selectedCourse = leftPanel.courseListPanel.list.getSelectedValue();
                         String query = "SELECT evaluationcriteria FROM CourseInfo WHERE coursecode = \"" + selectedCourse + "\"";
@@ -546,10 +554,10 @@ public class Frame extends JFrame {
                             Object response = objectInput.readObject();
                             List<?> evaluation = (List<?>) response;
                             @SuppressWarnings("unchecked")
-                            Map<String, String> evaluationMap = (Map<String, String>) evaluation.getFirst();
+                            Map<String, String> evaluationMap = (Map<String, String>) evaluation.get(0);
                             if (evaluationMap != null) {
                                 String evaluationCriteria = evaluationMap.get("evaluationcriteria");
-                                evaluationCrt = evaluationCriteria.substring(1, evaluationCriteria.length() - 1);
+                                evaluationCrt = evaluationCriteria.substring(1);
                                 evaluationCrt = " " + evaluationCrt;
                             } else {
                                 JOptionPane.showMessageDialog(null, "No evaluation criteria found for the selected course.",
@@ -566,23 +574,23 @@ public class Frame extends JFrame {
                         this.evaluationCriteria.setOpaque(true);
                         this.evaluationCriteria.setBackground(Color.WHITE);
                         this.evaluationCriteria.setBorder(BorderFactory.createLineBorder(Color.GRAY));
-                        this.evaluationCriteria.setPreferredSize(new Dimension(width / 32 * 20, height / 32));
-                        add(evaluationCriteria);
+                        setLayout(new BorderLayout());
+                        add(evaluationCriteria, BorderLayout.CENTER);
                     }
                 }
 
                 public LoPanel() {
                     this.tablePanel = new LOTablePanel();
                     this.evaluationPanel = new EvaluationPanel();
-                    setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
-                    add(tablePanel);
-                    add(evaluationPanel);
-                    this.tablePanel.setPreferredSize(new Dimension(width / 32 * 20, height / 32 * 7));
+                    this.tablePanel.setPreferredSize(new Dimension(width / 32 * 20, height / 32 * 7));                    setLayout(new BorderLayout());
                     this.evaluationPanel.setPreferredSize(new Dimension(width / 32 * 20, height / 32));
+                    add(tablePanel, BorderLayout.CENTER);
+                    add(evaluationPanel, BorderLayout.SOUTH);
+
                     setBorder(BorderFactory.createTitledBorder("Course Information"));
-                    setPreferredSize(new Dimension(width / 32 * 20, (height / 32 * 8)));
                 }
             }
+
 
             //------------------ Learning Outcome Panel ---------------------
             StudentPanel studentPanel;
